--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
-    "dev": "ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "clean": "rm -rf node_modules dist",
+    "prod:start": "npm run build && pm2 start ecosystem.config.js --env production",
+    "prod:stop": "pm2 stop coupon-server",
+    "prod:restart": "npm run build && pm2 restart coupon-server",
+    "prod:logs": "pm2 logs coupon-server",
+    "prod:list": "pm2 list"
   },
   "repository": "git@github.com:alefrodrigues538/coupon-server.git",
   "author": "Alef F R Santos",
@@ -29,6 +35,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^24.0.4"
+    "@types/node": "^24.0.4",
+    "nodemon": "^3.1.10"
   }
 }
