--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,10 @@
 [build.environment]
   NODE_VERSION = "20.12.2"
 
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+  
 [[redirects]]
   force = true
   from = "/api/*"
