--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 
 [build]
   command = "yarn install && yarn build"
-  functions = "dist/.netlify"
+  functions = ".netlify/functions"
 
 [build.environment]
   NODE_VERSION = "20.12.2"
