fix: add missing types for TypeScript and remove package-lock.json

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,8 @@
 
 [build]
   command = "yarn install && yarn build"
-  functions = "dist/.netlify/functions"
+  functions = ".netlify/functions"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20.12.2"
