fix: add missing types for TypeScript and remove package-lock.json

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # netlify.toml
 
 [build]
-  functions = ".netlify/functions"
+  functions = "dist/.netlify/functions"
   publish = "dist"
   command = "yarn install && yarn build"
 
